# porty

./: Cargo.toml  META_PROCESS.txt  README.md  START.txt  TASKS.txt  config.toml  generate-config  http-test.toml  logging-test.toml  porty.service
.session/: SESSION_01.md  SESSION_02_URGENT.md  SESSION_03.md
docs/: README.md
docs/archive/analysis/: egg.1.documentation-analysis.txt  egg.1.porty-meta-process-migration.txt
docs/misc/: performance-benchmarking.md  query-parameter-routing.md
docs/procs/: CONTINUE.md  DONE.txt  PROCESS.txt  QUICK_REF.txt  ROADMAP.txt  SPRINT.txt  TASKS.txt
docs/ref/: ARCHITECTURE.md  CLEANUP_ANALYSIS.md  DEVELOPMENT_INSIGHTS.md  DEVELOPMENT_NOTES.md
examples/: 01-basic-tcp.toml  02-http-dynamic.toml  03-host-routing.toml  04-production-ready.toml  05-development.toml  06-comprehensive.toml  README.md  host-test.toml
src/: args.rs  cfg.rs  http.rs  lib.rs  main.rs  net.rs
tests/: rsb_sanity.rs
